// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render with divided items 1`] = `
<ul
  className="list"
  data-list-items-divided={true}
>
  <ListItem
    hasChevron={false}
    isSelectable={false}
    isSelected={false}
    key="123"
  />
  <ListItem
    hasChevron={false}
    isSelectable={false}
    isSelected={false}
    key="124"
  />
  <ListItem
    hasChevron={false}
    isSelectable={false}
    isSelected={false}
    key="125"
  />
  <ListItem
    hasChevron={false}
    isSelectable={false}
    isSelected={false}
    key="126"
  />
  <ListItem
    hasChevron={false}
    isSelectable={false}
    isSelected={false}
    key="127"
  />
</ul>
`;

exports[`should render with items 1`] = `
<ul
  className="list"
>
  <ListItem
    hasChevron={false}
    isSelectable={false}
    isSelected={false}
    key="123"
  />
  <ListItem
    hasChevron={false}
    isSelectable={false}
    isSelected={false}
    key="124"
  />
  <ListItem
    hasChevron={false}
    isSelectable={false}
    isSelected={false}
    key="125"
  />
  <ListItem
    hasChevron={false}
    isSelectable={false}
    isSelected={false}
    key="126"
  />
  <ListItem
    hasChevron={false}
    isSelectable={false}
    isSelected={false}
    key="127"
  />
</ul>
`;

exports[`should render with no items 1`] = `
<ul
  className="list"
/>
`;
